# police_client_demo

./: CMakeLists.txt  Dockerfile  crowd_count_main.cpp  face_emo_main.cpp  face_recog_main.cpp  person_face_emo_main.cpp  person_re_id_main.cpp
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  crowd_count_client  face_emo_client  face_recog_client  person_face_emo_client  person_re_id_client
cmake/proto-src/: CrowdCountAPI.grpc.pb.cc  CrowdCountAPI.grpc.pb.h  CrowdCountAPI.pb.cc  CrowdCountAPI.pb.h  FaceEmogDetectAPI.grpc.pb.h  FaceEmogDetectAPI.pb.cc  FaceEmogDetectAPI.pb.h  FaceRecogAPI.grpc.pb.cc  FaceRecogAPI.grpc.pb.h  FaceRecogAPI.pb.cc  FaceRecogAPI.pb.h  PersonFaceEmoDetectAPI.grpc.pb.h  PersonReIDAPI.grpc.pb.h  PersonReIDAPI.pb.cc  common.grpc.pb.h
protos/: CrowdCountAPI.proto  FaceEmogDetectAPI.proto  FaceRecogAPI.proto  PersonFaceEmoDetectAPI.proto  PersonReIDAPI.proto  common.proto
